Add Ceilometer list samples
This scenario covers ceilometer "sample-list"

Change-Id: I50c5f957e67a176130d13ac39d23c9eaabee8ee6

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -296,6 +296,20 @@
         failure_rate:
           max: 0
 
+  CeilometerSamples.list_samples:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
   Dummy.dummy:
     -
       args:
