Add Keystone ec2-credentials scenarios
This submission adds methods to basic.py and utils.py
under rally/plugins/openstack/scenarios/keystone

Add configuration files for ec2-credentials
operations
1) create-and-list-ec2credentials.json
2) create-and-list-ec2credentials.yaml
3) create-and-delete-ec2credential.json
4) create-and-delete-ec2credential.yaml

Add unittests to test_utils.py and test_basic.py

Co-Authored-By: Ravikumar Venkatesan <ravikumar.venkatesan@hp.com>
Co-Authored-By: Roman Vasilets <rvasilets@mirantis.com>

Change-Id: Icdc786a144a42e983c79f70262e1f785dbe99e44

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -200,6 +200,34 @@
         failure_rate:
           max: 0
 
+  KeystoneBasic.create_and_list_ec2credentials:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+  KeystoneBasic.create_and_delete_ec2credential:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   CeilometerAlarms.create_alarm:
     -
       args:
