--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -1041,3 +1041,35 @@
       sla:
         failure_rate:
           max: 0
+
+  NovaNetworks.create_and_list_networks:
+    -
+      args:
+        start_cidr: "10.10.0.0/24"
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+  NovaNetworks.create_and_delete_network:
+    -
+      args:
+        start_cidr: "10.10.0.0/24"
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
