--- a/Dockerfile.rhel
+++ b/Dockerfile.rhel
@@ -1,6 +1,7 @@
 FROM rhel
 COPY . /tmp/rally
-RUN yum install -y git wget bash-completion python-devel libffi-devel gmp-devel \
+RUN  yum -y --disablerepo=* --enablerepo=rhel-7-server-rpms install \
+        git wget bash-completion python-devel libffi-devel gmp-devel \
         gcc libxml2-devel libxslt-devel openssl-devel postgresql-devel \
         babel python-decorator python-jinja2 python-netaddr python-six \
         PyYAML python-psycopg2 python-requests python27-python-sqlalchemy \
@@ -11,8 +12,8 @@ RUN yum install -y git wget bash-completion python-devel libffi-devel gmp-devel 
     cd /tmp/rally &&\
     ./install_rally.sh &&\
     sed 's|#*connection *=.*|connection = sqlite:////home/rally/.rally.sqlite|' -i /etc/rally/rally.conf &&\
-    #rpm -e --noscripts --nodeps libffi-devel libgcrypt-devel binutils libgomp &&\
-    yum remove -y openssl-devel python-devel libxml2-devel libxslt-devel gcc &&\
+    yum remove -y openssl-devel libxml2-devel libxslt-devel &&\
+    #yum remove -y openssl-devel python-devel libxml2-devel libxslt-devel gcc &&\
     yum autoremove -y &&\
     yum clean all &&\
     mv doc /usr/share/doc/rally &&\
