Change file loading mechanism for heat tests
Improve file loading mechanism for heat tests. Previously,
heat tests loaded template files for every tests. "types.set"
allows to exclude redundant file operations from tests.
In addition, the unit tests for heat rally-scenarios were updated
and mocking of CONF.benchmark was excluded from unit-tests.

Change-Id: Ibdace7bf96ff822701ee8505f1dcd232999a6fe8

--- a/samples/tasks/scenarios/heat/create-and-delete-stack.yaml
+++ b/samples/tasks/scenarios/heat/create-and-delete-stack.yaml
@@ -1,6 +1,8 @@
 ---
   HeatStacks.create_and_delete_stack:
     -
+      args:
+        template_path: "templates/default.yaml.template"
       runner:
         type: "constant"
         times: 10
