--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -571,6 +571,8 @@
 
   HeatStacks.create_and_list_stack:
     -
+      args:
+        template_path: "/home/jenkins/.rally/extra/default.yaml.template"
       runner:
         type: "constant"
         times: 6
@@ -585,6 +587,8 @@
 
   HeatStacks.create_and_delete_stack:
     -
+      args:
+        template_path: "/home/jenkins/.rally/extra/default.yaml.template"
       runner:
         type: "constant"
         times: 6
