--- a/samples/tasks/scenarios/heat/create-and-list-stack.yaml
+++ b/samples/tasks/scenarios/heat/create-and-list-stack.yaml
@@ -1,6 +1,8 @@
 ---
   HeatStacks.create_and_list_stack:
     -
+      args:
+        template_path: "templates/default.yaml.template"
       runner:
         type: "constant"
         times: 10
