--- a/Dockerfile.rhel
+++ b/Dockerfile.rhel
@@ -1,19 +1,19 @@
 FROM rhel
 COPY . /tmp/rally
-RUN  yum -y --disablerepo=* --enablerepo=rhel-7-server-rpms install \
-        git wget bash-completion python-devel libffi-devel gmp-devel \
-        gcc libxml2-devel libxslt-devel openssl-devel postgresql-devel \
-        babel python-decorator python-jinja2 python-netaddr python-six \
-        PyYAML python-psycopg2 python-requests python27-python-sqlalchemy \
-        python-sphinx python-virtualenv pyOpenSSL python-lxml &&\
+RUN  yum -y install git wget bash-completion python-devel libffi-devel \
+        gmp-devel gcc libxml2-devel libxslt-devel openssl-devel \
+        postgresql-devel babel python-decorator python-jinja2 python-netaddr \
+        python-six PyYAML python-psycopg2 python-requests \
+        python27-python-sqlalchemy python-sphinx python-virtualenv \
+        pyOpenSSL python-lxml &&\
     cd /tmp &&\
     curl "https://bootstrap.pypa.io/get-pip.py" -o "get-pip.py" &&\
     python get-pip.py &&\
     cd /tmp/rally &&\
     ./install_rally.sh &&\
     sed 's|#*connection *=.*|connection = sqlite:////home/rally/.rally.sqlite|' -i /etc/rally/rally.conf &&\
-    yum remove -y openssl-devel libxml2-devel libxslt-devel &&\
-    #yum remove -y openssl-devel python-devel libxml2-devel libxslt-devel gcc &&\
+    # yum remove -y openssl-devel libxml2-devel libxslt-devel &&\
+    yum remove -y openssl-devel python-devel libxml2-devel libxslt-devel gcc &&\
     yum autoremove -y &&\
     yum clean all &&\
     mv doc /usr/share/doc/rally &&\
