[Heat] Add rally template with Heat Resource Group
The patch adds a rally template for
Heat.create_and_delete_stack scenario that allows
to test performance of creation and deletion of Heat
Resource Groups.
The template allows to create a stack that contain
N instances and N volumes attached, where N - is
num_instances parameter in rally template.

Change-Id: If5c7c787c670b464eb3386635bcb1bfc5a218075

--- a/rally-jobs/heat.yaml
+++ b/rally-jobs/heat.yaml
@@ -46,6 +46,24 @@
         failure_rate:
           max: 0
 
+    -
+      args:
+        template_path: "/home/jenkins/.rally/extra/resource_group_server_with_volume.yaml.template"
+        parameters:
+           num_instances: 2
+        files: ["/home/jenkins/.rally/extra/server_with_volume.yaml.template"]
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
   HeatStacks.create_check_delete_stack:
     -
       args:
