Add Nova scenario to list hypervisors
Benchmarks the 'nova list-hypervisors' command.

Change-Id: I64243de369ac02afb7dcf246b3d8e28d7c43d172

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -1336,6 +1336,18 @@
         failure_rate:
           max: 0
 
+  NovaHypervisors.list_hypervisors:
+    -
+      args:
+        detailed: True
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      sla:
+        failure_rate:
+          max: 0
+
   VMTasks.boot_runcommand_delete:
     -
       args:
