--- a/rally-jobs/heat.yaml
+++ b/rally-jobs/heat.yaml
@@ -226,3 +226,19 @@
       sla:
         failure_rate:
           max: 0
+
+  HeatStacks.create_snapshot_restore_delete_stack:
+    -
+      args:
+        template_path: "/home/jenkins/.rally/extra/random_strings.yaml.template"
+      runner:
+        type: "constant"
+        times: 6
+        concurrency: 3
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 3
+      sla:
+        failure_rate:
+          max: 0
