Fix broken samples scenario for CinderVolumes.create-and-attach-volume
Image argument  is not specified for this scenario in samples. So its
not possible to run them.

Change-Id: Ia4bd03806863a49856d7284013fc63a4a92e26bc

--- a/samples/tasks/scenarios/cinder/create-and-attach-volume.yaml
+++ b/samples/tasks/scenarios/cinder/create-and-attach-volume.yaml
@@ -21,7 +21,9 @@
           min: 1
           max: 5
         flavor:
-            name: "m1.nano"
+            name: "m1.tiny"
+        image:
+            name: "^cirros.*uec$"
       runner:
         type: "constant"
         times: 5
