--- a/rally-jobs/fuel.yaml
+++ b/rally-jobs/fuel.yaml
@@ -20,3 +20,20 @@
       sla:
         failure_rate:
           max: 0
+
+  FuelNodes.add_and_remove_node:
+    -
+      context:
+        fuel_environments:
+          environments: 2
+          release_id: 1
+          network_provider: "neutron"
+          deployment_mode: "ha_compact"
+          net_segment_type: "vlan"
+          resource_management_workers: 1
+      runner:
+        type: "serial"
+        times: 20
+      sla:
+        failure_rate:
+            max: 0
