[Fuel] Environments scenarios
* add create_and_delete_environment scenario
* add create_and_list_environments scenario
* add cleanup for environments

Co-Authored-By: Alexander Maretskiy <amaretskiy@mirantis.com>

Change-Id: Ic04c222f3b105218c8d0109073da7f4bb2289453

--- a/rally-jobs/fuel.yaml
+++ b/rally-jobs/fuel.yaml
@@ -1,7 +1,18 @@
 ---
-
-  FuelEnvironments.list_environments:
+  FuelEnvironments.create_and_list_environments:
     -
+      runner:
+        type: "constant"
+        times: 200
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
+
+  FuelEnvironments.create_and_delete_environment:
+    -
+      args:
+        delete_retries: 10
       runner:
         type: "constant"
         times: 200
