--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,10 @@ classifier =
 packages =
     rally
 
+data_files =
+    etc/bash_completion.d =
+        etc/rally.bash_completion
+
 [entry_points]
 console_scripts =
     rally = rally.cli.main:main
