Add E126 pep8 rule
Updated rally code with E126 pep8 rule

Closes-Bug:#1432078
Change-Id: Iefebdc6fdc4604869f26711240370b9e007e55df

--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ commands =
 downloadcache = ~/cache/pip
 
 [flake8]
-ignore = E126,H703
+ignore = H703
 show-source = true
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools,build,setup.py
 
