Add functional test for task samples
It would be nice if there is a functional test to confirm
all the task samples are good for out-of-box testing. So
here we go.

Also Fix nova/boot-lock-unlock-and-delete scenario flavor,
nova/boot-and-associate-floating-ip flavor, nova/boot-and-rebuild.
Change flavor value from apsent on gate to regexp.

Change-Id: I033135828b960da4cc3fd35b96ee69f700815a35
Co-Authored-By: Roman Vasilets <rvasilets@mirantis.com>
Co-Authored-By: Fei Long Wang <flwang@catalyst.net.nz>

--- a/samples/tasks/scenarios/nova/boot-lock-unlock-and-delete.yaml
+++ b/samples/tasks/scenarios/nova/boot-lock-unlock-and-delete.yaml
@@ -5,7 +5,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "cirros-0.3.2-x86_64-uec"
+            name: "^cirros.*uec$"
       runner:
         type: "constant"
         times: 10
