--- a/samples/tasks/scenarios/nova/boot-and-rebuild.yaml
+++ b/samples/tasks/scenarios/nova/boot-and-rebuild.yaml
@@ -4,9 +4,9 @@ NovaServers.boot_and_rebuild_server:
     flavor:
       name: "m1.tiny"
     from_image:
-      name: "cirros-0.3.2-x86_64-uec"
+      name: "^cirros.*uec$"
     to_image:
-      name: "cirros-0.3.2-x86_64-uec"
+      name: "^cirros.*uec$"
   runner:
     type: constant
     times: 5
