Add Cinder create_and_restore_volume_backup scenario
Implement crete_and_restore_volume_backup scenario for Cinder.

Change-Id: Ieeaf36e14454b18497c1b8730c5d3b5e167d98ee

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -856,6 +856,42 @@
         failure_rate:
           max: 0
 
+  CinderVolumes.create_and_restore_volume_backup:
+    -
+      args:
+        size: 1
+        do_delete: True
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        roles:
+          - "Member"
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        size: 1
+        do_delete: False
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        roles:
+          - "Member"
+      sla:
+        failure_rate:
+          max: 0
+
   VMTasks.boot_runcommand_delete:
     -
       args:
