--- a/setup.cfg
+++ b/setup.cfg
@@ -25,8 +25,8 @@ packages =
 
 [entry_points]
 console_scripts =
-    rally = rally.cmd.main:main
-    rally-manage = rally.cmd.manage:main
+    rally = rally.cli.main:main
+    rally-manage = rally.cli.manage:main
 oslo.config.opts =
     rally = rally.common.opts:list_opts
 
