--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,19 @@ install_command = pip install -U {opts} {packages}
 usedevelop = True
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 distribute = false
+basepython = python2.7
 
 [testenv:pep8]
 commands = flake8
 distribute = false
+
+[testenv:py26]
+basepython = python2.6
+
+
+[testenv:py34]
+basepython = python3.4
+
 
 [testenv:venv]
 commands = {posargs}
