[Swift] Add additional Swift scenarios
This patch adds additional swift scenarios to use what was created
during swift context.

Swift Scenarios:
- list_and_download_objects_in_containers
- list_objects_in_containers

Blueprint benchmark-scenarios-for-swift

Change-Id: I6d615889a1acfcd4686eb061f1041f5b22fd09f0

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -948,7 +948,6 @@
         failure_rate:
           max: 0
 
-
   SwiftObjects.create_container_and_object_then_list_objects:
     -
       args:
@@ -1034,6 +1033,46 @@
         users:
           tenants: 3
           users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+  SwiftObjects.list_and_download_objects_in_containers:
+    -
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        roles:
+          - "admin"
+        swift_objects:
+          containers_per_tenant: 1
+          objects_per_container: 5
+          object_size: 10240
+      sla:
+        failure_rate:
+          max: 0
+
+  SwiftObjects.list_objects_in_containers:
+    -
+      runner:
+        type: "constant"
+        times: 6
+        concurrency: 3
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        roles:
+          - "admin"
+        swift_objects:
+          containers_per_tenant: 1
+          objects_per_container: 10
+          object_size: 1024
       sla:
         failure_rate:
           max: 0
