[Manila] Add context for Manila quotas
Add context for following Manila quotas:
- shares
- gigabytes
- snapshots
- snapshot_gigabytes
- share_networks

And set default values as unlimited (-1).

Change-Id: Ie92f9ba03b5229984ee8b148d4bef715693c31e7

--- a/rally-jobs/rally-manila-no-ss.yaml
+++ b/rally-jobs/rally-manila-no-ss.yaml
@@ -1,4 +1,22 @@
 ---
+  Dummy.dummy:
+    -
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        quotas:
+          manila:
+            shares: -1
+            gigabytes: -1
+            snapshots: -1
+            snapshot_gigabytes: -1
+            share_networks: -1
+
   ManilaShares.list_shares:
     -
       args:
