--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,9 @@ deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 install_command = pip install -U {opts} {packages}
 usedevelop = True
-commands = python setup.py testr --slowest --testr-args='{posargs}'
+commands = 
+  find . -type f -name "*.pyc" -delete
+  python setup.py testr --slowest --testr-args='{posargs}'
 distribute = false
 basepython = python2.7
 
