--- a/rally-jobs/rally-manila-no-ss.yaml
+++ b/rally-jobs/rally-manila-no-ss.yaml
@@ -32,3 +32,26 @@
       sla:
         failure_rate:
           max: 0
+
+  ManilaShares.create_and_delete_share:
+    -
+      args:
+        share_proto: "nfs"
+        size: 1
+        min_sleep: 1
+        max_sleep: 2
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        quotas:
+          manila:
+            shares: -1
+            gigabytes: -1
+        users:
+          tenants: 2
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
