[Manila] Add scenario for creation/deletion of Manila share networks
List of changes:
- Added support of 'create' and 'delete' operations for share networks.
- Added benchmark for creating and deleting share networks.

Change-Id: I25ffb2d8d769f6d81972f8773951246f11abb2a0

--- a/rally-jobs/rally-manila.yaml
+++ b/rally-jobs/rally-manila.yaml
@@ -32,3 +32,22 @@
       sla:
         failure_rate:
           max: 0
+
+  ManilaShares.create_share_network_and_delete:
+    -
+      args:
+        name: "rally"
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      context:
+        quotas:
+          manila:
+            share_networks: -1
+        users:
+          tenants: 2
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
