Change "find" command path in tox.ini
tox command shows WARNING message as follow.
"WARNING:test command found but not installed in testenv"
If we use "find" command in tox.ini, we should use the full path.
This patch changes fix command path and remove the Warning message.

Change-Id: Icb86ff2294ee79e500b98ef79e458f0302dc295e
Closes-bug: 1464495

--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,8 @@ deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 install_command = pip install -U {opts} {packages}
 usedevelop = True
-commands = 
-  find . -type f -name "*.pyc" -delete
+commands =
+  /usr/bin/find . -type f -name "*.pyc" -delete
   python setup.py testr --slowest --testr-args='{posargs}'
 distribute = false
 basepython = python2.7
