[Manila] Add benchmark for Manila list share servers operation
List of changes:
- Added support of 'list' operation for share servers.
- Added benchmark for listing of share servers.

Change-Id: Iea34c51eaf3cf73de52f882b09592a793a3159c1

--- a/rally-jobs/rally-manila.yaml
+++ b/rally-jobs/rally-manila.yaml
@@ -73,3 +73,15 @@
       sla:
         failure_rate:
           max: 0
+
+  ManilaShares.list_share_servers:
+    -
+      args:
+        search_opts: {}
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
