--- a/rally-jobs/rally-manila.yaml
+++ b/rally-jobs/rally-manila.yaml
@@ -85,3 +85,28 @@
       sla:
         failure_rate:
           max: 0
+
+  ManilaShares.create_security_service_and_delete:
+  {% for s in ("ldap", "kerberos", "active_directory") %}
+    -
+      args:
+        security_service_type: {{s}}
+        dns_ip: "fake_dns_ip"
+        server: "fake-server"
+        domain: "fake_domain"
+        user: "fake_user"
+        password: "fake_password"
+        name: "fake_name"
+        description: "fake_description"
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+  {% endfor %}
