[Manila] Add scenario for attach of security service to share network
List of changes:
- Added support of 'attach-security-service-to-share-network' operation.
- Added benchmark for creating security service and share network and attaching
the former to the latter.

Change-Id: Icc6fe65ddf796603e7f507b62c2f6c76a030c400

--- a/rally-jobs/rally-manila.yaml
+++ b/rally-jobs/rally-manila.yaml
@@ -110,3 +110,24 @@
         failure_rate:
           max: 0
   {% endfor %}
+
+  ManilaShares.attach_security_service_to_share_network:
+  {% for s in ("ldap", "kerberos", "active_directory") %}
+    -
+      args:
+        security_service_type: {{s}}
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        quotas:
+          manila:
+            share_networks: -1
+      sla:
+        failure_rate:
+          max: 0
+  {% endfor %}
