[Manila] Add create_and_list_share scenario for Manila
Add 'create_and_list_share' scenario and task samples and update manila
tasks for CI.

Change-Id: I9317e40f8f62eb84d26833f7efbe32337cdfb770

--- a/rally-jobs/rally-manila-no-ss.yaml
+++ b/rally-jobs/rally-manila-no-ss.yaml
@@ -33,7 +33,8 @@
         failure_rate:
           max: 0
 
-  ManilaShares.create_and_delete_share:
+  {% for s in ("create_and_delete_share", "create_and_list_share") %}
+  ManilaShares.{{s}}:
     -
       args:
         share_proto: "nfs"
@@ -55,3 +56,4 @@
       sla:
         failure_rate:
           max: 0
+  {% endfor %}
