Add Heat scenario to test scaling policies
Scenario triggers scaling policy webhooks and tracks their
performance.

Change-Id: I82270c1ceb2bf99254581b0b57f152a1361298d2

--- a/rally-jobs/heat.yaml
+++ b/rally-jobs/heat.yaml
@@ -242,3 +242,41 @@
       sla:
         failure_rate:
           max: 0
+
+  HeatStacks.create_stack_and_scale:
+    -
+      args:
+        template_path: "/home/jenkins/.rally/extra/autoscaling_group.yaml.template"
+        output_key: "scaling_url"
+        delta: 1
+        parameters:
+          scaling_adjustment: 1
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 1
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        template_path: "/home/jenkins/.rally/extra/autoscaling_group.yaml.template"
+        output_key: "scaling_url"
+        delta: -1
+        parameters:
+          scaling_adjustment: -1
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
