--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -220,6 +220,13 @@
 # Time interval(in sec) between checks when waiting for stack to be restored.
 #heat_stack_restore_poll_interval = 1.0
 
+# Time (in sec) to wait for stack to scale up or down. (floating point value)
+#heat_stack_scale_timeout = 3600.0
+
+# Time interval (in sec) between checks when waiting for a stack to
+# scale up or down.  (floating point value)
+#heat_stack_scale_poll_interval = 1.0
+
 # Delay between creating Manila share and polling for its status.
 # (floating point value)
 #manila_share_create_prepoll_delay = 2.0
